# Learning-SYCL

./: .gitignore  CMakeLists.txt  README.md
examples/00.helloworld.cmake/: CMakeLists.txt  main.cpp  readme.md
examples/01.queues/: CMakeLists.txt  main.inorder.cpp  main.outoforder.explicit.cpp  main.outoforder.implicit.cpp  readme.md
examples/02.kernels/: CMakeLists.txt  main.basic.cpp  main.ndrange.cpp  readme.md
examples/03.exceptions/: CMakeLists.txt  main.cpp  readme.md
examples/04.Buffers/: readme.md
examples/04.Dependencies/: readme.md
examples/04.dependencies/: readme.md
examples/05.barriers/: readme.md
examples/06.collective.funcs/: readme.md
examples/07.memories/: readme.md
